# SpixRWKV-7

./: .gitignore  .lsp.json  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  kaggle_train_tiny_imagenet.ipynb  main.py  pyproject.toml  reproduce_403.py  skills-lock.json  tokenizer.py
.agents/: AGENTS.md
VisualRWKV7/: __init__.py  diffSLIC.py  diffSLIC_funcs.py  drop.py  model.py
VisualRWKV7/utils/: colors.py  data.py  gamut.py
configs/model/: conv_large.yaml  conv_medium.yaml  conv_small.yaml  conv_tiny.yaml  gnn_large.yaml  gnn_medium.yaml  gnn_small.yaml  gnn_tiny.yaml  hybrid_large.yaml  hybrid_medium.yaml  hybrid_small.yaml  hybrid_tiny.yaml  large.yaml  medium.yaml  small.yaml  tiny.yaml  vq_large.yaml  vq_medium.yaml  vq_small.yaml  vq_tiny.yaml
configs/task/: ade20k.yaml  humordb.yaml
graphify-out/: .graphify_ast.json  .graphify_chunk_00.json  .graphify_chunk_01.json  .graphify_detect.json  .graphify_python  .graphify_root  .graphify_sem_batch1.json  .graphify_uncached.txt
graphify-out/cache/: stat-index.json
results/: ade20k_sanity_compare.txt  ade20k_sanity_conv.txt  ade20k_sanity_downsample.txt  ade20k_sanity_rms_swiglu.txt  ade20k_sanity_tiny.txt  compare_alt_vit_medium.txt  compare_arch_ablations.txt  compare_arch_alt_vit_ablations.txt  compare_arch_alt_vit_conv.txt  compare_arch_conv.txt  compare_arch_spix_tiny.txt  compare_architectures.txt  compare_architectures_alt_vit.txt  compare_architectures_alt_vit_downsample.txt  compare_medium.txt  conv_spix_integration_report.md  demo.txt  demo_conv.txt  demo_conv_smoke.txt  demo_gnn.txt  demo_gnn_smoke.txt  demo_medium.txt  demo_rms_swiglu.txt  demo_spix_smoke.txt  demo_vq_smoke.txt  diagnose_conv.txt  diagnose_medium.txt  diagnose_rms_swiglu.txt  diagnose_training.txt  diagnose_training_downsample.txt  fast_test_medium.txt  fast_test_medium_rms_swiglu.txt  fast_test_training.txt  fast_test_training_conv.txt  fast_test_training_downsample.txt  full_benchmark.txt  humordb_medium.txt  variant_comparison_report.md  variant_downsample_factor_comparison.md
results/audit/: variant_comparison_audit.md
scripts/: ade20k_sanity.py:186-202  benchmark_cpp_vs_py.py  benchmark_cpp_vs_pytorch.py  compare_architectures.py  compare_architectures_alt_vit.py  debug_nan.py  demo.py  run_full_benchmark.py  run_generalization_benchmark.py  visualize_model.py  visualize_superpixels.py
spixrwkv7/: __init__.py  jit.py  spixrwkv7.py  task_utils.py
spixrwkv7/data/: colors.py  diff_slic.py  gamut.py  image_utils.py  lnsnet.py  transforms.py
spixrwkv7/kernels/: __init__.py  optimized_block.py  optimized_vision.py  rwkv7_kernel.py  setup.py
spixrwkv7/layers/: graph.py
spixrwkv7/models/: __init__.py  common.py  conv_spixrwkv7.py  gnn_spixrwkv7.py  hybrid_spixrwkv7.py  model.py  spixrwkv7.py  vq_rwkv7.py
spixrwkv7/utils/: __init__.py  logging.py
tasks/: __init__.py  config_loader.py
tasks/diagnostics/: diagnose_training.py  fast_test_training.py
tasks/visualization/: visualize_superpixels.py
tests/: conftest.py  test_colors.py  test_dataload.py  test_diffSlic.py  test_model.py  test_regression.py
tests/test_data/: test_colors.py  test_diff_slic.py  test_transforms.py
(+22 files in other folders)
