[project]
name = "spixrwkv7"
version = "0.2.0"
description = "SpixRWKV-7: Superpixel Graph RWKV-7 Vision Backbone"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26.0",
    "torch>=2.12.0",
    "pytest>=7.0.0",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
    "scikit-learn>=1.9.0",
    "scikit-image>=0.26.0",
    "pillow>=12.2.0",
    "matplotlib>=3.11.0",
    "torchvision>=0.27.0",
    "hilbertcurve==2.0.5",
    "datasets>=5.0.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["spixrwkv7*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
